some data changed

--- a/DEMO004/json/appdetailtype1.json
+++ b/DEMO004/json/appdetailtype1.json
@@ -1,13 +1,13 @@
 {
     "data": {
-        "applyTitle": "档案转递申请",
+        "applyTitle": "xxxxxxxxxx",
         "content": [
             {
-                "name": "蒋业",
-                "department": "南方基地",
-                "idNumber": "43112619920212082X",
-                "applyTime": "2017年12月20日",
-                "applyReason": "测试",
+                "name": "xxxxxxxxxx",
+                "department": "xxxxxxxxxx",
+                "idNumber": "xxxxxxxxxx",
+                "applyTime": "xxxxxxxxxx",
+                "applyReason": "xxxxxxxxxx",
                 "auditOpinion": "",
                 "auditTime": ""
             }
