--- a/DEMO004/json/appdetailtype2.json
+++ b/DEMO004/json/appdetailtype2.json
@@ -1,18 +1,18 @@
 {
     "data": {
-        "applyTitle": "收入证明申请",
+        "applyTitle": "xxxxxxxxxxxxxxxxxxx",
         "content": [
             {
-                "name": "董灿佳",
-                "dept": "南方基地",
-                "empIdNumber": "440582199406260676",
-                "empCode": "21016638",
+                "name": "xxxxxxxx",
+                "dept": "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
+                "empIdNumber": "xxxxxxxxx",
+                "empCode": "xxxxxxxxxxxxxxxx",
                 "printNumber": "8",
-                "applyTime": "2017年12月28日",
+                "applyTime": "xxxxxxx",
                 "bankType": "1",
                 "monthIncome": "5554",
-                "monthIncomeBig": "伍仟伍佰伍拾肆元整",
-                "applyReason": "reason5553",
+                "monthIncomeBig": "xxxxxxxxx",
+                "applyReason": "xxxxxxxxxxxxxxx",
                 "auditCheckIncome": "",
                 "auditCheckIncomeBig": "",
                 "auditOpinion": "",
