--- a/DEMO004/json/appdetailtype4.json
+++ b/DEMO004/json/appdetailtype4.json
@@ -1,28 +1,28 @@
 {
   "data": {
-    "applyTitle": "出国在职收入证明申请",
+    "applyTitle": "xxxxxxxxxx",
     "type": "1",
     "contents": [
       {
-        "Name": "董灿佳",
-        "Dept_Name": "南方基地",
-        "ID_Number": "440582199406260676",
-        "EmployId": "21016638",
+        "Name": "xxxxxxxxxx",
+        "Dept_Name": "xxxxxxxxxx",
+        "ID_Number": "xxxxxxxxxx",
+        "EmployId": "xxxxxxxxxx",
         "PrintsNumber": "1",
-        "ApplyTime": "2017年12月28日",
+        "ApplyTime": "xxxxxxxxxx",
         "ApplyReason": "1",
-        "EngName": "Mr.Dong",
-        "EngBirthday": "June 26th 1996",
-        "EngEmployTime": "July 10th 2017",
-        "EngBeforeTaxCount": "12000",
-        "CountryTime": "6-day-travel to Korea in September 2018",
-        "CHABirthday": "1994年06月26日",
-        "CHAEmployTime": "2017年07月10日",
-        "MrName": "董先生",
-        "CHABeforeTaxCount": "12000",
-        "AboardTime": "2018年9月",
-        "Country": "韩国",
-        "Time": "6",
+        "EngName": "xxxxxxxxxx.xxxxxxxxxx",
+        "EngBirthday": "xxxxxxxxxx xxxxxxxxxx xxxxxxxxxx",
+        "EngEmployTime": "xxxxxxxxxx xxxxxxxxxx xxxxxxxxxx",
+        "EngBeforeTaxCount": "xxxxxxxxxx",
+        "CountryTime": "xxxxxxxxxx-xxxxxxxxxx-xxxxxxxxxx xxxxxxxxxx xxxxxxxxxx xxxxxxxxxx xxxxxxxxxx xxxxxxxxxx",
+        "CHABirthday": "xxxxxxxxxx",
+        "CHAEmployTime": "xxxxxxxxxx",
+        "MrName": "xxxxxxxxxx",
+        "CHABeforeTaxCount": "xxxxxxxxxx",
+        "AboardTime": "xxxxxxxxxx",
+        "Country": "xxxxxxxxxx",
+        "Time": "xxxxxxxxxx",
         "AUDIT_OPINION": "",
         "AUDIT_TIME": "",
         "HR_AUDIT_OPINION": "",
