--- a/DEMO004/json/applist.json
+++ b/DEMO004/json/applist.json
@@ -3,28 +3,28 @@
     "data": {
         "applyList": [
             {
-            "type": "在职证明",
-            "company": "省公司本部",
-            "department": "南方基地",
+            "type": "xxxxxxxxxxxxxxxxxxxxx",
+            "company": "xxxxxxxxx",
+            "department": "xxxxxxxxxxx",
             "reason": "测试1",
             "time": "2017-12-21",
             "state": "初始",
             "handler": ""
         },
         {
-            "type": "在职证明",
-            "company": "省公司本部",
-            "department": "南方基地",
+            "type": "xxxxxxxxxx",
+            "company": "xxxxxxxxxx",
+            "department": "xxxxxxxxxx",
             "reason": "测试3",
             "time": "2017-12-21",
             "state": "初始",
             "handler": ""
         },
         {
-            "type": "在职证明",
-            "company": "省公司本部",
-            "department": "南方基地",
-            "reason": "测试5",
+            "type": "xxxxxxxxxx",
+            "company": "xxxxxxxxxx",
+            "department": "xxxxxxxxxx",
+            "reason": "xxxxxxxxxx",
             "time": "2017-12-21",
             "state": "初始",
             "handler": ""
